Closed
Bug 1402013
Opened 8 years ago
Closed 2 years ago
Assertion failure: mContent->IsAnyOfSVGElements(nsGkAtoms::svg, nsGkAtoms::symbol) || (mContent->IsSVGElement(nsGkAtoms::use) && mRect.Size() == nsSize(0,0)) || mRect.IsEqualEdges(nsRect()) (Only inner-<svg>/<use> is expected to have mRect set)
Categories
(Core :: SVG, defect, P3)
Core
SVG
Tracking
()
RESOLVED
FIXED
120 Branch
People
(Reporter: jkratzer, Assigned: longsonr)
References
(Blocks 2 open bugs)
Details
(Keywords: assertion, testcase)
Attachments
(3 files, 1 obsolete file)
Testcase found while fuzzing mozilla-central rev 47f7b6c64265.
Flags: in-testsuite?
Reporter | ||
Comment 1•8 years ago
|
||
Comment 2•8 years ago
|
||
This goes back further than mozregression can bisect (1 year).
status-firefox55:
--- → wontfix
status-firefox56:
--- → wontfix
status-firefox57:
--- → affected
status-firefox58:
--- → affected
status-firefox-esr52:
--- → wontfix
![]() |
||
Updated•8 years ago
|
Priority: -- → P3
Updated•8 years ago
|
Has Regression Range: --- → no
Comment 3•8 years ago
|
||
status-firefox59:
--- → ?
Updated•3 years ago
|
Severity: normal → S3
Assignee | ||
Comment 5•2 years ago
|
||
Doesn't seem to assert any more.
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → WORKSFORME
Updated•2 years ago
|
Status: RESOLVED → REOPENED
status-firefox118:
--- → wontfix
status-firefox119:
--- → affected
status-firefox120:
--- → affected
status-firefox-esr115:
--- → affected
Resolution: WORKSFORME → ---
Comment 6•2 years ago
|
||
Attachment #8910812 -
Attachment is obsolete: true
Assignee | ||
Comment 7•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → longsonr
Updated•2 years ago
|
Attachment #9356918 -
Attachment description: Bug 1402013 - stop calculation position for SVG elements that aren't governed by the CSS box model r=emilio → Bug 1402013 - stop calculating position for SVG elements that aren't governed by the CSS box model r=emilio
Assignee | ||
Comment 8•2 years ago
|
||
Pushed by longsonr@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/64c030fceb99
stop calculating position for SVG elements that aren't governed by the CSS box model r=emilio
Comment 10•2 years ago
|
||
bugherder |
Status: REOPENED → RESOLVED
Closed: 2 years ago → 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch
Assignee | ||
Updated•2 years ago
|
Flags: in-testsuite? → in-testsuite+
Updated•2 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•