Bug 1402013 - stop calculating position for SVG elements that aren't governed by the CSS box model r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D190222